<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="32dp"
    android:paddingBottom="128dp"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="?font_label"
            android:textAlignment="center"
            android:text="@string/login_tv_account" />

        <EditText
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="?font_et"
            android:textColor="@color/black"
            android:id="@+id/login_et_account"
            android:hint="@string/login_et_account_hint"
            android:padding="4dp"
            android:background="@drawable/et_bg"
            android:maxLength="11"
            tools:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="?font_label"
            android:textAlignment="center"
            android:text="@string/login_tv_pwd" />

        <EditText
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="?font_et"
            android:textColor="@color/black"
            android:id="@+id/login_et_pwd"
            android:background="@drawable/et_bg"
            android:padding="4dp"
            android:inputType="textPassword"
            android:maxLength="20"
            tools:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:checked="true"
            android:id="@+id/login_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="?font_tv_hint"
            android:text="@string/login_tv_remember_pwd" />

        <TextView
            android:layout_marginStart="100dp"
            android:id="@+id/login_tv_version"
            android:text="@string/login_tv_version"
            android:textColor="@color/grey"
            android:layout_width="128dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_login"
            android:textSize="?font_btn"
            android:layout_marginHorizontal="32dp"
            android:id="@+id/login_btn_login" />

    </LinearLayout>

</LinearLayout>