<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="64sp"
    android:paddingHorizontal="8sp"
    android:gravity="top"
    tools:context=".login.QuestionnaireActivity">
    <!--    todo: 怎么布局才能让界面在各种分辨率下都适配？ -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:textSize="?font_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="40sp"
        android:text="@string/ques_tv_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="?font_label"
            android:text="@string/ques_tv_name" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/ques_et_name"
            android:background="@drawable/et_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="?font_label"
            android:text="@string/ques_tv_tele" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/ques_et_tele"
            android:background="@drawable/et_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="?font_label"
            android:text="@string/ques_tv_weixin" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/ques_et_weixin"
            android:background="@drawable/et_bg" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:checked="true"
            android:id="@+id/ques_cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="?font_tv_hint"
            android:text="@string/ques_tv_agreement" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ques_btn_submit"
            android:textSize="?font_btn"
            android:layout_marginHorizontal="32dp"
            android:id="@+id/ques_btn_submit" />

    </LinearLayout>

</LinearLayout>