<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".train.TrainMainActivity">
    <!--    最外层这个LinearLayout似乎是没有用的，可以考虑将最外层替换为ScrollView？-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/train_tv_section_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train_default_section_name"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/train_tv_sentence_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/train_default_sentence_id"
                        android:textColor="@color/black"
                        android:textSize="26sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/seekbar_bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/train_tv_sentence"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/train_default_sentence"
                    android:textSize="26sp" />

                <SeekBar
                    android:id="@+id/train_sb_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:progress="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/train_img_description_volume"
                    android:src="@drawable/mic_foreground" />

                <SeekBar
                    android:id="@+id/train_sb_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="71"
                    android:progressDrawable="@drawable/light_blue_seekbar_style"
                    android:thumb="@null" />

            </LinearLayout>

            <Button
                android:id="@+id/train_btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16sp"
                android:clickable="false"
                android:enabled="true"
                android:text="@string/train_btn_next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>